modules/gce/compute/firewall.tf
resource "google_compute_firewall" "default" {
  name    = "tf-rancher-servers-firewall"
  network = "default"

  allow {
    protocol = "tcp"
    ports    = ["80"]
  }

  allow {
    protocol = "tcp"
    ports    = ["8080"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["rancher-servers"]
}
